--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
+*{
+  --red : #ff4066;
+  --yellow : #fff16a;
+}
+
 .App {
   text-align: center;
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  background-color: var(--red);
+  /* background-color: var(--yellow); */
+  /* background: linear-gradient(25deg, var(--red), var(--yellow)); */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.heading{
+  width: 100%;
+  padding: 10px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   align-items: center;
+}
+.heading div{
+  margin: 8px;
+  color: #fff;
+}
+select{
+  padding: 8px 12px;
+  color: var(--red);
+  background-color: #fff16a;
+  border-radius: 10px;
+}
+select:focus, select:hover{
+  outline: none;
+  border: 1px solid var(--red);
+}
+select option{
+  background-color: #fff;
+}
+
+.mainArea{
+  padding: 10px;
+  width: 100%;
+}
+.mainArea div{
+  display: flex;
+}
+textarea{
+  margin-top: 20px;
+  padding: 10px;
+  resize: none;
+  border-radius: 10px;
+  border: 2px solid #d6283d;
+  color: #d6283d;
+  font-size: medium;
+  outline: none;
+  background-color: #ffe3e9;
+  font-size: 1rem;
+  width: 100%;
+  height: 200px;
+}
+button{
+  margin-top: 20px;
+  width: 50%;
+  height: 35px;
+  font-size: medium;
+  color: var(--red);
+  background-color: var(--yellow);
+  border-radius: 10px;
+  border: none;  
+}
+
+button:active{
+  background-color: #ffe600;
+}
+
+.loadingScreen{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #000000c4;
+  /* transform: translate(-50%, -50%); */
 }
-
-.App-link {
-  color: #61dafb;
+.loadingScreen .load{
+  width: 360px;
+  height: 240px;
+  padding: 10px;
+  text-align: center;
+  background-color: var(--yellow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  color: #d6283d;
+  font-weight: 400;
+  font-size: 1.6rem;  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 510px) {
+  .mainArea div {
+    flex-direction: column;
   }
 }
